--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "sqlalchemy>=2.0.12",
-    "psycopg[binary]>=3.1.9",
+    "sqlalchemy>=1.4.0,<2.0.0", 
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.2.1",
+    "psycopg2-binary>=2.8.6",
 ]
 
 [project.urls]
