--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,28 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version:
-          - "3.11"
+          - "3.7.1"
+          - "3.8.0"
+          - "3.9.0"
+          - "3.10.0"
+          - "3.11.0"
+        postgresql-version:
+          - "postgres:9.6"
+          - "postgres:10.0"
+          - "postgres:11.0"
+          - "postgres:12.0"
+          - "postgres:13.0"
+          - "postgres:14.0"
+          - "postgres:15.0"
+        # sqlalchemy 1.4 doesn't support psycopg3
+        ci-extras:
+          - ci-psycopg2-sqlalchemy1
+          - ci-psycopg2-sqlalchemy2
+          - ci-psycopg3-sqlalchemy2
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v3"
@@ -21,10 +38,10 @@ jobs:
           python-version: '${{ matrix.python-version }}'
       - name: "Run PostgreSQL"
         run: |
-          ./start-services.sh
+          ./start-services.sh ${{ matrix.postgresql-version }}
       - name: "Install package and python dependencies"
         run: |
-          pip install .[dev]
+          pip install .[ci,${{ matrix.ci-extras }}]
       - name: "Wait for PostgreSQL"
         run: "timeout 60 bash -c 'until echo > /dev/tcp/127.0.0.1/5432; do sleep 5; done'"
       - name: "Test"
