--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Update version in pyproject.toml
       run: >-
         sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.VERSION }}/g" pyproject.toml
-      name: upload release to PyPI
+    - name: upload release to PyPI
       runs-on: ubuntu-latest
       permissions:
         # IMPORTANT: this permission is mandatory for trusted publishing
