ci: test on 3.12.0b3

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
           - "3.9.0"
           - "3.10.0"
           - "3.11.0"
+          - "3.12.0-beta.3"
         postgresql-version:
           - "postgres:9.6"
           - "postgres:10.0"
