using cast to change to list type

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         run: "timeout 60 bash -c 'until echo > /dev/tcp/127.0.0.1/5432; do sleep 5; done'"
       - name: "Run Type Checking"
         run: |
-          mypy --strict pg_bulk_ingest
+          mypy --strict --ignore-missing-imports pg_bulk_ingest
       - name: "Test"
         run: |
           pytest --cov
