--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 description = "A collection of Python utility functions for ingesting data into SQLAlchemy-defined PostgreSQL tables, automatically migrating them as needed, and minimising locking"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8.2"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -26,11 +26,13 @@ dependencies = [
 dev = [
     "psycopg>=3.1.4",
     "psycopg2>=2.9.2",
+    "pgvector>=0.1.8",
     "pytest>=7.2.1",
     # Type checking
     "mypy <1.5",
 ]
 ci = [
+    "pgvector",
     "pytest",
     "pytest-cov",
     "coverage",
