--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,15 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         python-version:
-          - "3.7.1"
-          - "3.8.0"
+          - "3.8.2"
           - "3.9.0"
           - "3.10.0"
-          - "3.11.0"
+          - "3.11.1"
+          - "3.12.0"
         postgresql-version:
           - "postgres:9.6"
           - "postgres:10.0"
@@ -34,16 +34,18 @@ jobs:
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
-      - uses: "actions/setup-python@v4"
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v6
         with:
-          python-version: '${{ matrix.python-version }}'
+          python-version: ${{ matrix.python-version }}
+          activate-environment: true
       - name: "Run PostgreSQL"
         run: |
           ./start-services.sh ${{ matrix.postgresql-version }}
       - name: "Install package and python dependencies"
         run: |
-          python -m pip install --upgrade pip
-          pip install .[ci,${{ matrix.ci-extras }}]
+          uv pip install --upgrade pip
+          CC=clang uv pip install .[ci,${{ matrix.ci-extras }}]
       - name: "Wait for PostgreSQL"
         run: "timeout 60 bash -c 'until echo > /dev/tcp/127.0.0.1/5432; do sleep 5; done'"
       - name: "Run Type Checking"
@@ -51,5 +53,6 @@ jobs:
           mypy pg_bulk_ingest
       - name: "Test"
         run: |
-          pytest --cov
+          python --version
+          PG_VERSION=${{ matrix.postgresql-version }} pytest --cov
       - uses: codecov/codecov-action@v3
