ci: run tests on Python 3.13
This makes tests run on Python 3.13.

psycopg2 doesn't support Python 3.13.0 until 2.9.10, so tests for Python 3.13.0
are not run for earlier psycopg2.

Similarly, SQLAlchemy 2 doesn't support Python 3.13.0 until 2.0.31.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,24 @@ ci-psycopg2-sqlalchemy2 = [
     "sqlalchemy==2.0.0",
     "to-file-like-obj==0.0.5",
 ]
+ci-psycopg2-9-10-sqlalchemy1 = [
+    "psycopg2==2.9.10",
+    "sqlalchemy==1.4.24",
+    "to-file-like-obj==0.0.5",
+]
 ci-psycopg3-sqlalchemy2 = [
     "psycopg==3.1.4",
     "sqlalchemy==2.0.0",
+    "to-file-like-obj==0.0.5",
+]
+ci-psycopg2-9-10-sqlalchemy2-0-31 = [
+    "psycopg2==2.9.10",
+    "sqlalchemy==2.0.31",
+    "to-file-like-obj==0.0.5",
+]
+ci-psycopg3-sqlalchemy2-0-31 = [
+    "psycopg==3.1.4",
+    "sqlalchemy==2.0.31",
     "to-file-like-obj==0.0.5",
 ]
 
