--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
           - "3.10.0"
           - "3.11.1"
           - "3.12.0"
+          - "3.13.0"
         postgresql-version:
           - "9.6"
           - "10.0"
@@ -27,11 +28,58 @@ jobs:
           - "14.0"
           - "15.0"
           - "16.0"
-        # sqlalchemy 1.4 doesn't support psycopg3
+        # SqlAlchemy 1.4 doesn't support psycopg3, psycopg2 < 2.9.10, doesn't support Python 13,
+        # and SqlAlchemy 2 < 2.0.30 doesn't support Python 13
         ci-extras:
           - ci-psycopg2-sqlalchemy1
           - ci-psycopg2-sqlalchemy2
+          - ci-psycopg2-9-10-sqlalchemy1
+          - ci-psycopg2-9-10-sqlalchemy2-0-31
           - ci-psycopg3-sqlalchemy2
+          - ci-psycopg3-sqlalchemy2-0-31
+        exclude:
+          - python-version: "3.7.7"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy1
+          - python-version: "3.7.7"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy2-0-31
+          - python-version: "3.7.7"
+            ci-extras: ci-psycopg3-sqlalchemy2-0-31
+          - python-version: "3.8.2"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy1
+          - python-version: "3.8.2"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy2-0-31
+          - python-version: "3.8.2"
+            ci-extras: ci-psycopg3-sqlalchemy2-0-31
+          - python-version: "3.9.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy1
+          - python-version: "3.9.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy2-0-31
+          - python-version: "3.9.0"
+            ci-extras: ci-psycopg3-sqlalchemy2-0-31
+          - python-version: "3.10.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy1
+          - python-version: "3.10.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy2-0-31
+          - python-version: "3.10.0"
+            ci-extras: ci-psycopg3-sqlalchemy2-0-31
+          - python-version: "3.11.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy1
+          - python-version: "3.11.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy2-0-31
+          - python-version: "3.11.0"
+            ci-extras: ci-psycopg3-sqlalchemy2-0-31
+          - python-version: "3.12.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy1
+          - python-version: "3.12.0"
+            ci-extras: ci-psycopg2-9-10-sqlalchemy2-0-31
+          - python-version: "3.12.0"
+            ci-extras: ci-psycopg3-sqlalchemy2-0-31
+          - python-version: "3.13.0"
+            ci-extras: ci-psycopg2-sqlalchemy1
+          - python-version: "3.13.0"
+            ci-extras: ci-psycopg2-sqlalchemy2
+          - python-version: "3.13.0"
+            ci-extras: ci-psycopg3-sqlalchemy2
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
