--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,12 @@ dev = [
     "psycopg2>=2.9.2",
     "pgvector>=0.1.8",
     "pytest>=7.2.1",
+    # Polars integration
+    "polars>=1.0.0;python_version>='3.8'",
+    "pyarrow>=8.0.0",
+    # Pandas integration
+    "pandas>=1.3.5",
+    "numpy>=1.20.3",
     # Type checking
     "mypy <1.5",
 ]
@@ -36,6 +42,12 @@ ci = [
     "pytest",
     "pytest-cov",
     "coverage",
+    # Polars integration
+    "polars>=1.0.0;python_version>='3.8'",
+    "pyarrow>=8.0.0",
+    # Pandas integration
+    "numpy",
+    "pandas",
     # Type checking
     "mypy <1.5",
 ]
