--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,21 +33,36 @@ dev = [
     "psycopg2>=2.9.2",
     "pgvector>=0.1.8",
     # To run type checking
-    "mypy<1.5",
+    "mypy<1.16.0",
 ]
 ci = [
     "to-file-like-obj==0.0.5",
     "pg-force-execute==0.0.10",
     "psycopg2==2.9.2;python_version<'3.13'",
     "psycopg2==2.9.10;python_version>='3.13'",
-    "psycopg==3.1.4",
 ]
-ci-sqlalchemy1 = [
+ci-sqlalchemy1-without-pg-arrow = [
     "sqlalchemy==1.4.24",
 ]
-ci-sqlalchemy2 = [
+ci-sqlalchemy1-with-pg-arrow = [
+    "sqlalchemy==1.4.24",
+    "psycopg==3.2.0",
+    "pgarrow==0.0.7",
+    # Ideally would test more versions
+    "pyarrow==18.0.0",
+    "adbc-driver-postgresql==1.6.0",
+]
+ci-sqlalchemy2-without-pg-arrow = [
     "sqlalchemy==2.0.0;python_version<'3.13'",
     "sqlalchemy==2.0.31;python_version>='3.13'",
+]
+ci-sqlalchemy2-with-pg-arrow = [
+    "sqlalchemy==2.0.7;python_version<'3.13'",
+    "sqlalchemy==2.0.41;python_version>='3.13'",
+    "pgarrow==0.0.7",
+    # Ideally would test more versions
+    "pyarrow==18.0.0",
+    "adbc-driver-postgresql==1.6.0",
 ]
 
 [project.urls]
